--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,8 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: goreleaser/goreleaser-action@v1
         with:
-          version: latest
+          # version: latest
+          version: v0.129.0
           args: release
           # key: ${{ secrets.GPG_CODE_SIGN }}
         env:
