--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,7 +18,10 @@ builds:
     flags:
       - -mod=vendor
     ldflags:
-      - -s -w -X main.GitCommit={{.ShortCommit}} -X main.ReleaseVer={{.Version}}
+      - -s -w
+      - -X main.GitCommit={{.ShortCommit}}
+      - -X main.ReleaseVer={{.Version}}
+      - -X main.ReleaseDate={{.Date}}
 
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
