--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,12 +24,14 @@ jobs:
         env:
           GOFLAGS: '-mod=vendor'
         run: |
-          go fmt $(go list ./... | grep -v /vendor/)
+          GO111MODULE=off go get honnef.co/go/tools/cmd/staticcheck
+          go fmt $(go list ./... | grep -v /vendor/) | xargs -I {} -r /bin/sh -c "/bin/echo {} && exit 1"
           go vet $(go list ./... | grep -v /vendor/)
+          staticcheck $(go list ./... | grep -v /vendor/)
           go test -v -race $(go list ./... | grep -v /vendor/)
 
       - name: Run GoReleaser
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') && (matrix.go == 1.14)
         uses: goreleaser/goreleaser-action@v1
         with:
           version: latest
