--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,11 +10,17 @@ builds:
     env:
       - CGO_ENABLED=0
     goos:
-      - windows
-      - linux
       - darwin
+      - linux
+      - windows
     goarch:
       - amd64
+      - arm64
+    ignore:
+      - goos: darwin
+        goarch: arm64
+      - goos: windows
+        goarch: arm64
     flags:
       - -mod=vendor
     ldflags:
