--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,24 +2,27 @@ name: Go
 on: [push]
 jobs:
   test:
-    name: Build
+    name: Test
     strategy:
       matrix:
         go: ['1.25']
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+
     container: golang:${{ matrix.go }}
     steps:
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
-      - name: Git Info
-        id: git
-        run: |
-          echo "SOURCE_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
-          echo "SOURCE_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
-          echo "SOURCE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: ${{ matrix.go }}
+          cache: true
 
       - name: Test
         env:
@@ -34,12 +37,74 @@ jobs:
           staticcheck $(go list ./... | grep -v /vendor/)
           go test -v -race $(go list ./... | grep -v /vendor/)
 
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
+      packages: write
+      id-token: write # Required for provenance metadata
+      attestations: write
+      security-events: write # For Scan results
+    container: golang:1.25
+    steps:
+      - name: Install Dependencies
+        run: |
+          dnf install -y openssl-devel systemd-devel gcc git wget findutils
+          ln -s /usr/include/systemd/ /opt/cross/aarch64-ol8u10-linux-gnu/include/systemd
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v6
+        with:
+          go-version: '1.25'
+          cache: true
+
+      - name: Git Info
+        id: git
+        run: |
+          git config --global --add safe.directory $GITHUB_WORKSPACE
+          echo "SOURCE_NAME=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
+          echo "SOURCE_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+          echo "SOURCE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v4.0.0
+
+      - name: Install Syft
+        uses: anchore/sbom-action/download-syft@v0
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
-        if: startsWith(github.ref, 'refs/tags/') && (matrix.go == 1.25)
         with:
           version: latest
           args: release
-          # key: ${{ secrets.GPG_CODE_SIGN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SOURCE_NAME: ${{ steps.git.outputs.SOURCE_NAME }}
+          SOURCE_BRANCH: ${{ steps.git.outputs.SOURCE_BRANCH }}
+          SOURCE_TAG: ${{ steps.git.outputs.SOURCE_TAG }}
+
+      - name: Attest Checksums
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-checksums: ./dist/checksums.txt
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
+          category: 'container-security'
